<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings" translatable="false">Settings</string>
    <string name="appName">Pomoć starijima</string>
    <string name="title_activity_sat">SatActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_poruka">PorukaActivity</string>
    <string name="title_activity_stetoskop">Izbor terapija</string>
    <string name="title_activity_poziv">PozivActivity</string>
    <string name="title_activity_podesavanja">PodesavanjaActivity</string>
    <string name="title_activity_lista">Svi podaci</string>
    <string name="title_activity_listaR">Podaci o rodjendanima</string>
    <string name="title_activity_listaTV">Podaci o TV programima</string>
    <string name="podesavanja">Podešavanja</string>
    <string name="ujutru">UJUTRU</string>
    <string name="upodne">U PODNE</string>
    <string name="uvece">UVEČE</string>
    <string name="opciono">OPCIONO</string>
    <string name="un">Unesite broj:</string>
    <string name="rodjenjdani">RODJENDANI</string>
    <string name="tvProgram">TV PROGRAM</string>
    <string name="pregledi">PREGLEDI</string>
    <string name="slave">SLAVE</string>
    <string name="imePomen">IME:</string>
    <string name="grobljePomen">MESTO:</string>
    <string name="imeSlave">IME SLAVE:</string>
    <string name="koSlavi">KO SVE SLAVI?</string>
    <string name="pomeni">POMENI</string>
    <string name="uneto">SVI PODACI</string>
    <string name="nazad">NAZAD</string>
    <string name="hint_unos">Unesite ovde:</string>
    <string name="lekar">LEKAR</string>

    <color name="blue">#00688B</color>
    <color name="plava">#00006B</color>
    <color name="White">#FFFFFF</color>
    <color name="Ivory">#FFFFF0</color>
    <color name="LightYellow">#FFFFE0</color>
    <color name="Yellow">#FFFF00</color>
    <color name="Snow">#FFFAFA</color>
    <color name="FloralWhite">#FFFAF0</color>
    <color name="LemonChiffon">#FFFACD</color>
    <color name="Cornsilk">#FFF8DC</color>
    <color name="Seashell">#FFF5EE</color>
    <color name="LavenderBlush">#FFF0F5</color>
    <color name="PapayaWhip">#FFEFD5</color>
    <color name="BlanchedAlmond">#FFEBCD</color>
    <color name="white">#FFFFFF</color>
    <color name="yellow">#FFFF00</color>
    <color name="fuchsia">#FF00FF</color>
    <color name="red">#FF0000</color>
    <color name="silver">#C0C0C0</color>
    <color name="gray">#808080</color>
    <color name="olive">#808000</color>
    <color name="purple">#800080</color>
    <color name="maroon">#800000</color>
    <color name="aqua">#00FFFF</color>
    <color name="lime">#00FF00</color>
    <color name="teal">#008080</color>
    <color name="green">#008000</color>
    <color name="navy">#000080</color>
    <color name="black">#000000</color>
    <color name="nova">#A39D72</color>
    <color name="ivica">#EDD8A6</color>
    <color name="ivica2">#3B2414</color>

    <string name="title_activity_terapija1">Terapija 1</string>
    <string name="title_activity_rodjendan">Rodjendan</string>
    <string name="title_activity_tv_program">TV Program</string>
    <string name="title_activity_pregledi">Pregledi</string>
    <string name="title_activity_slava">Slava</string>
    <string name="title_activity_pomeni">Pomeni</string>

</resources>