<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btnBackTerapije"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pozadina1"
    android:orientation="vertical"
    android:weightSum="12"
    tools:context="com.example.pois24.Sat.SatActivity"
    tools:ignore="MergeRootFrame" >
    
    <Button
        android:id="@+id/btnPregledi"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:layout_weight="2"
        android:background="@drawable/rectangle"
        android:text="@string/lekar"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/btnRodjendani"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:layout_weight="2"
        android:background="@drawable/rectangle"
        android:text="@string/rodjenjdani"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold" />
    
     <Button
        android:id="@+id/btnSlave"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:layout_weight="2"
        android:background="@drawable/rectangle"
        android:text="@string/slave"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnPomeni"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:layout_weight="2"
        android:background="@drawable/rectangle"
        android:text="@string/pomeni"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold" />

    

    <Button
        android:id="@+id/btnUneto"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:layout_weight="2"
        android:background="@drawable/rectangle"
        android:text="@string/uneto"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnNazad"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:layout_weight="2"
        android:background="@drawable/rectangle"
        android:text="@string/nazad"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold" />

</LinearLayout>