<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pozadina1"
    android:orientation="vertical"
    android:weightSum="11"
    tools:context="com.example.pois24.StetoskopActivity"
    tools:ignore="MergeRootFrame" >

    <Button
        
        android:id="@+id/btnUjutru"
        android:layout_width="match_parent" 
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="25dp"
        android:layout_weight="2"
        android:background="@drawable/rectangle"
        android:text="@string/ujutru"
        android:textColor="@color/White"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnUpodne"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="18dp"
        android:layout_weight="2"
        android:background="@drawable/rectangle"
        android:text="@string/upodne"
        android:textColor="@color/White"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnUvece"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="18dp"
        android:layout_weight="2"
        android:background="@drawable/rectangle"
        android:text="@string/uvece"
        android:textColor="@color/White"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnOpciono"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="18dp"
        android:layout_weight="2"
        android:background="@drawable/rectangle"
        android:text="@string/opciono"
        android:textColor="@color/White"
        android:textSize="30sp"
        android:textStyle="bold" />
  <Button
        android:id="@+id/btnNazad"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="18dp"
        android:layout_weight="2"
        android:background="@drawable/rectangle"
        android:text="@string/nazad"
        android:textColor="@color/White"
        android:textSize="30sp"
        android:textStyle="bold" />

</LinearLayout>