<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
   android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pozadina1"
    android:orientation="vertical"
    android:weightSum="11"
    tools:context="com.example.pois24.Sat.SlavaActivity" >

     <TextView
        android:id="@+id/txtSlaveTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:gravity="center"
        android:text="@string/slave"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold" />
     
    <TextView
        android:id="@+id/txtImeSlave"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="10sp"
        android:layout_weight="1"
        android:text="@string/imeSlave"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />
    
    <EditText
        android:id="@+id/editUnosSlave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="20"
        android:inputType="textPersonName" >
    </EditText>
    
      <Button
        android:id="@+id/izaberiDane"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:text="IZABERI DATUM"
        android:background="@drawable/rectangle"
        android:textColor="@color/White"
        android:textStyle="bold" />
      
      
      <TextView
        android:id="@+id/txtIspisDatum"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textColor="@color/White"
        android:textSize="20sp"
        android:textStyle="bold" />
      
    
    <TextView
        android:id="@+id/txtKoSlavi"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="10sp"
        android:layout_weight="1"
        android:text="@string/koSlavi"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editKoSlavi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textPersonName" >

    </EditText>
    
        <Button
        android:id="@+id/btnSacuvajBroj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20sp"
        android:layout_weight="1"
        android:background="@drawable/rectangle"
        android:hint="Sačuvaj željeni broj"
        android:text="SAČUVAJ"
        android:textColor="@color/White"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnNazadRodjendan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20sp"
        android:layout_marginTop="20sp"
        android:layout_weight="1"
        android:background="@drawable/rectangle"
        android:hint="Sačuvaj željeni broj"
        android:text="NAZAD"
        android:textColor="@color/White"
        android:textSize="30sp"
        android:textStyle="bold" />
    

</LinearLayout>
